feat: add bulk mcp methods
